Trigger_Framework/objects/Trigger_Setting__c.object
<CustomObject>
    <fields>
        <fullName>After_Delete__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If Checked trigger will run in after delete context</inlineHelpText>
        <label>After Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>After_Insert__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If Checked trigger will run in after insert context</inlineHelpText>
        <label>After Insert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>After_Undelete__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If Checked trigger will run in after undelete context</inlineHelpText>
        <label>After Undelete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>After_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If Checked trigger will run in after update context</inlineHelpText>
        <label>After Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Before_Delete__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If Checked trigger will run in before delete context</inlineHelpText>
        <label>Before Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Before_Insert__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>If Checked trigger will run in before insert context</inlineHelpText>
        <label>Before Insert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Before_Update__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>If Checked trigger will run in before update context</inlineHelpText>
        <label>Before Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates that whether the trigger is enabled or not for the particular object.</inlineHelpText>
        <label>Disabled?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prevent_Recursion__c</fullName>
        <inlineHelpText>Please enter the fields API name with comma separated to prevent the recursion.</inlineHelpText>
        <label>Prevent Recursion</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Trigger Setting</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TS - {00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trigger Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>